--- a/todoapp/style.css
+++ b/todoapp/style.css
@@ -10,6 +10,19 @@ button {
     cursor: pointer;
     user-select: none;
 }
+.image-container {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    width: 50px;
+    height: 50px;
+    overflow: hidden;
+}
+img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+}
 #tareas {
     margin-top: 15px;
 }
@@ -36,7 +49,7 @@ button {
     background-color: rgb(255, 211, 129);
     margin-top: 5px;
 }
-.succes {
+.success {
     border: 2px solid green;
     background-color: rgb(136, 255, 136);
     margin-top: 5px;
